gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coolstore-inventory-service
  labels:
    app.kubernetes.io/name: coolstore-inventory-service
    app.kubernetes.io/component: inventory
    app.kubernetes.io/part-of: coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: coolstore-inventory-service
      app.kubernetes.io/component: inventory
  template:
    metadata:
      labels:
        app.kubernetes.io/name: coolstore-inventory-service
        app.kubernetes.io/component: inventory
        app.kubernetes.io/part-of: coolstore
    spec:
      serviceAccountName: coolstore-inventory-service
      containers:
        - name: coolstore-inventory-service
          image: image-registry.openshift-image-registry.svc:5000/coolstore-inventory-dev/coolstore-inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
