gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolstore-inventory-service
  labels:
    app.kubernetes.io/name: coolstore-inventory-service
    app.kubernetes.io/component: inventory
    app.kubernetes.io/part-of: coolstore
spec:
  selector:
    app.kubernetes.io/name: coolstore-inventory-service
    app.kubernetes.io/component: inventory
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
