gitops/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: coolstore-inventory-service
  labels:
    app.kubernetes.io/name: coolstore-inventory-service
    app.kubernetes.io/component: inventory
    app.kubernetes.io/part-of: coolstore
spec:
  to:
    kind: Service
    name: coolstore-inventory-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
